# Mirror

./: .gitignore  CMakeLists.txt  README.md  testfile.cpp
Mirror/: CMakeLists.txt  MirrorCore.hpp  newtest.cpp  test.cpp
Mirror/Camera/: FlyCamera.hpp
Mirror/Management/: RenderManager.cpp  RenderManager.hpp  WindowManager.cpp  WindowManager.hpp  render_manager.cpp  render_manager.h  window_manager.cpp  window_manager.h
Mirror/Mirror/: MirrorCore.hpp  test.cpp
Mirror/Mirror/Management/: RenderManager.cpp  RenderManager.hpp  WindowManager.cpp  WindowManager.hpp
Mirror/Mirror/Renderable/: RenderableObject.hpp  StaticObject.cpp  StaticObject.hpp
Mirror/Mirror/Shaders/: frag.glsl  vertex.glsl
Mirror/Mirror/Util/: IO.cpp  IO.hpp
Mirror/Renderable/: IRenderable.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  StaticObject.cpp  StaticObject.hpp  mesh.cpp  mesh.h  model.cpp  model.h  renderable.h
Mirror/Shaders/: Shader.cpp  Shader.hpp  frag.glsl  shader.cpp  shader.h  vert.glsl
include/mirrorlog/: MirrorLog.hpp
include/mirrormod/: mirrormod.h
